feat: connect lifelog facts to record quests (#215)